--- a/PartyWebApp/Views/Parties/Create.cshtml
+++ b/PartyWebApp/Views/Parties/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="price" class="control-label"></label>
-                <input asp-for="price" class="form-control" />
+                <label asp-for="price" class="control-label"> </label>
+                <input asp-for="price" class="form-control" autocomplete="off" />
                 <span asp-validation-for="price" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,14 +28,41 @@
                 <span asp-validation-for="eventDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="genre" class="control-label"></label>
-                <select asp-for="genre" class="form-control"></select>
+                <label asp-for="startTime" class="control-label"> </label>
+                <input asp-for="startTime" class="form-control" />
+                <span asp-validation-for="minimalAge" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="genre" class="control-label"> Genre</label>
+                <select asp-for="genre" class="form-control" asp-items="Html.GetEnumSelectList<Genre>()">
+                    <option selected="selected" value="">Please select</option>
+                </select>
                 <span asp-validation-for="genre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="minimalAge" class="control-label"></label>
+                <label asp-for="minimalAge" class="control-label"> </label>
                 <input asp-for="minimalAge" class="form-control" />
                 <span asp-validation-for="minimalAge" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="performers" class="control-label"> </label>
+                <input asp-for="performers" class="form-control" />
+                <span asp-validation-for="performers" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ticketsCounter" class="control-label"> </label>
+                <input asp-for="ticketsCounter" class="form-control" />
+                <span asp-validation-for="ticketsCounter" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="club" class="control-label"> </label>
+                <input asp-for="club" class="form-control" />
+                <span asp-validation-for="club" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="imageUrl" class="control-label"> Image </label>
+                <input asp-for="imageUrl" class="form-control" />
+                <span asp-validation-for="imageUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
