--- a/PartyWebApp/Views/Parties/Edit.cshtml
+++ b/PartyWebApp/Views/Parties/Edit.cshtml
@@ -14,28 +14,55 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="name" class="control-label"></label>
+                <label asp-for="name" class="control-label">Name</label>
                 <input asp-for="name" class="form-control" />
                 <span asp-validation-for="name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="price" class="control-label"></label>
+                <label asp-for="price" class="control-label"> Price</label>
                 <input asp-for="price" class="form-control" />
                 <span asp-validation-for="price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventDate" class="control-label"></label>
+                <label asp-for="eventDate" class="control-label"> Event Date</label>
                 <input asp-for="eventDate" class="form-control" />
                 <span asp-validation-for="eventDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="genre" class="control-label"></label>
-                <select asp-for="genre" class="form-control"></select>
+                <label asp-for="startTime" class="control-label"> </label>
+                <input asp-for="startTime" class="form-control" />
+                <span asp-validation-for="minimalAge" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="genre" class="control-label"> Genre </label>
+                <select asp-for="genre" class="form-control" asp-items="Html.GetEnumSelectList<Genre>()">
+                    <option selected="selected" value="">Please select</option>
+                </select>
                 <span asp-validation-for="genre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="minimalAge" class="control-label"></label>
+                <label asp-for="minimalAge" class="control-label">Minimal Age</label>
                 <input asp-for="minimalAge" class="form-control" />
+                <span asp-validation-for="minimalAge" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="performers" class="control-label"> </label>
+                <input asp-for="performers" class="form-control" />
+                <span asp-validation-for="performers" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ticketsCounter" class="control-label"></label>
+                <input asp-for="ticketsCounter" class="form-control" />
+                <span asp-validation-for="ticketsCounter" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="club" class="control-label"> </label>
+                <input asp-for="club" class="form-control" />
+                <span asp-validation-for="club" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="imageUrl" class="control-label"> Image</label>
+                <input asp-for="imageUrl" class="form-control" />
                 <span asp-validation-for="minimalAge" class="text-danger"></span>
             </div>
             <div class="form-group">
