--- a/PartyWebApp/Views/Performers/Delete.cshtml
+++ b/PartyWebApp/Views/Performers/Delete.cshtml
@@ -13,34 +13,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.firstName)
+            @Html.DisplayNameFor(model => model.SpotifyArtistObj.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.firstName)
+            @Html.DisplayFor(model => model.SpotifyArtistObj.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.lastName)
+            @Html.DisplayNameFor(model => model.SpotifyArtistObj.Genres)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.lastName)
+            @Html.DisplayFor(model => model.SpotifyArtistObj.Genres)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.genre)
+            @Html.DisplayNameFor(model => model.SpotifyArtistObj.Followers)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.genre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.rating)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.rating)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.imageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.imageUrl)
+            @Html.DisplayFor(model => model.SpotifyArtistObj.Followers)
         </dd>
     </dl>
     
